test/success/integration/_succ_lactarg_2.hs
x :: Int -> Int -> Int
x y z = y + z
w :: Int
w = 3
y :: Int
y = x w 4
main = print "hello"