test/fail/integration/_fail_grammar_decl_funct_2.hs
x :: Int -> Int
x y = print x
main = print "hello"